--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
-  "name": "MX App",
-  "short_name": "MXApp",
+  "name": "MX Learning",
+  "short_name": "MXLearning",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#0077cc",
-  "icons": []
+  "theme_color": "#faeee5",
+  "icons": [
+    { "src": "/static/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/static/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+  ]
 }
